# maturin-mac-os-dep-repro

./: Cargo.toml
.github/workflows/: test.yml
mitochondria/: Cargo.toml
mitochondria/src/: lib.rs
src/: lib.rs
